@@ -1,3 +1,8 @@
+2011-07-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* debbugs-gnu.el (debbugs-summary-mode): Make sure we don't Cc
+	both bug-gnu-emacs (etc) and debbugs.
+
 2011-07-02  Michael Albinus  <michael.albinus@gmx.de>
 
 	* debbugs-gnu.el (debbugs-emacs): Propertize with 'help-echo.
